# searchlight

./: .gitignore  CMakeLists.txt  sl-patch-14.12.patch
cmake/Modules/: FindCoin.cmake  FindFFTW.cmake  FindGFlags.cmake  FindLog4CXX.cmake  FindOrTools.cmake  FindSciDB.cmake
doc/: Doxyfile.in  sl_config.md  sl_run.md
etc/: log4cxx.properties  sl.json
examples/mimic/: sl_mimic.json
gui/: config.ini  gui.py  mimic_tmpl.json  mplwidget.py  sl.ui
src/: CMakeLists.txt
src/examples/: opt.cpp  point.cpp  sim.cpp  sum.cpp
src/searchlight/: LogicalSearchlight.cpp  PhysicalSearchlight.cpp  adapter.cpp  adapter.h  array_access.cpp  array_access.h  array_desc.cpp  array_desc.h  base.cpp  base.h  cache.h  default_search.cpp  default_search.h  ortools_inc.cpp  ortools_inc.h  ortools_loader.h  ortools_model.cpp  ortools_model.h  relax.cpp  relax.h  sampler.cpp  sampler.h  scidb_inc.h  searchlight.cpp  searchlight.h  searchlight_collector.cpp  searchlight_collector.h  searchlight_messages.proto  searchlight_messenger.cpp  searchlight_messenger.h  searchlight_task.cpp  searchlight_task.h  searchlight_udfs.cpp  searchlight_udfs.h  synopsis.cpp  synopsis.h  validator.cpp  validator.h
src/searchlight/ops/: DepartArray.cpp  DepartArray.h  LogicalDepart.cpp  LogicalSearchlight.cpp  PhysicalDepart.cpp  PhysicalSearchlight.cpp
src/tasks/: common.cpp  common.h  dist.cpp  mimic.cpp  sdss.cpp  sw.cpp
src/utils/: dft_sampler.cpp  paa_sampler.cpp
utils/: load_mimic.py  log4cxx.properties  mimic.py  parse_sl_logs.py  query_scidb.py  remote_utils.py  sampler.py  scidb4py-14.3.patch  scidb_http.py  scidb_iquery.py  stats.py  synth_gen.py
utils/generators/: synth_gen.py
utils/mimic_mit/: load_mimic.py  mimic_load.script  mimic_sample.script  patients.filter  sl.script  useful_commands
utils/relax/: mimic_relax.json  relax.py  sl_relax.json
utils/sampler/: sampler.py
utils/scidb4py/: .coveragerc  CHANGELOG.rst  MANIFEST.in  README.rst  scidb4py-14.12.patch  setup.py  test.sh
utils/scidb4py/scidb4py/: _chunk.py  _dense_chunk.py  _message.py  _rle_bitmap_chunk.py  _rle_chunk.py  _scidb_msg_pb2.py  array.py  error.py  result.py  schema.py  types.py
utils/scidb4py/tests/: scidbpy_test.py
utils/scidb_query/: query_scidb_times.py  scidb_http.py  scidb_iquery.py
utils/sdss/: sdss_shifter.py  sdss_walker.py  sdss_wget.py
web-gui/: README.md  config.ini  dist_tmpl.json  flask.cfg  mimic.cache  mimic.index  mimic.py  mimic_index.py  mimic_tmpl.json  scidb_passwd  searchlight.py  simple-interaction.txt
web-gui/scidb/: scidb_http.py
web-gui/scidb4py/: __init__.py  _chunk.py  _decompressor.py  _message.py  _network.py  _scidb_msg.proto  _scidb_msg_pb2.py  connection.py
web-gui/static/: searchlight.html
web-gui/static/js/: sl.js
